welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: ')' expected but string literal found.
while (litMessage!="A"or"B"){
                      ^BDRBuggle:5: error: illegal start of simple expression
	}
        ^