welcome.lessons.welcome.bdr.BDR.scala.code
while (litMessage!="A"or"B"){
  recule(1)
}